Use valueOf instead of deprecated-for-removal boxing constructors
The decompiled source used new Integer/Short/Byte(...) throughout;
those wrapper constructors are @Deprecated(forRemoval=true) since Java 9
and the build warned about them. Replace all 77 occurrences with the
valueOf(...) factory methods (non-deprecated and allocation-free). No
behavioural change: these values are core message payloads and HashMap
keys, both compared by equals, not identity.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>