@@ -8,12 +8,12 @@ public class Server32 extends Server29 {
    }
 
    public void togglePreferred() {
-      Object[] var1 = new Object[]{new Integer(this.getId()), new Byte((byte)(this.isPreferred() ? 0 : 1))};
+      Object[] var1 = new Object[]{Integer.valueOf(this.getId()), Byte.valueOf((byte)(this.isPreferred() ? 0 : 1))};
       this.core.send((short)67, var1);
    }
 
    public void rename(String var1) {
-      Object[] var2 = new Object[]{new Integer(this.getId()), var1};
+      Object[] var2 = new Object[]{Integer.valueOf(this.getId()), var1};
       this.core.send((short)66, var2);
    }
 }
